# rpcFilesystem

./: .clang-format  CMakeLists.txt  README.md
include/: client_rpc.hpp  protocol.hpp  server_rpc.hpp
src/: client_app.cpp  client_rpc.cpp  server_app.cpp  server_rpc.cpp
